Basic crud for broker registry
