# src/services/inventory/docs/swagger.yaml
@@ -64,11 +64,13 @@ paths:
       - application/json
       description: Retrieve a paginated list of cluster that the user has access
       parameters:
-      - in: query
+      - default: 1
+        in: query
         name: PageNumber
         required: true
         type: integer
-      - in: query
+      - default: 10
+        in: query
         name: PageSize
         required: true
         type: integer
@@ -124,6 +126,48 @@ paths:
           schema:
             type: boolean
       summary: Soft delete a broker
+      tags:
+      - Broker
+    get:
+      consumes:
+      - application/json
+      description: Retrieve a single rabbitmq cluster
+      parameters:
+      - description: Id of a broker to be retrived
+        in: path
+        name: brokerId
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entities.BrokerEntity'
+      summary: Retrieve a single rabbitmq cluster
+      tags:
+      - Broker
+  /broker/exists:
+    get:
+      consumes:
+      - application/json
+      description: Check if exists an rabbitmq cluster with host es
+      parameters:
+      - in: query
+        name: Host
+        required: true
+        type: string
+      - in: query
+        name: Port
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+      summary: Verify if exists a rabbitmqcluster
       tags:
       - Broker
 swagger: "2.0"
